# uvg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cliff.toml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-test.yml  lock-upgrade.yml  pr-title-check.yml  prepare-release.yml  release.yml  release_pr.yml  tag-on-merge.yml
src/uvg/: __init__.py  __main__.py  cli.py  environment.py  shell.py
src/uvg/cli/: activate.py  create.py  env.py  init.py  main.py  remove.py
src/uvg/commands/: __init__.py  activate.py  create.py  deactivate.py  init.py  remove.py  setup.py  shell.py
src/uvg/commands/env/: __init__.py  current.py  directory.py  list.py
src/uvg/core/: __init__.py  environment.py  errors.py  profile.py  shell.py
src/uvg/utils/: shell.py
tests/: __init__.py  smoke_test.py  test_cli.py  test_managed_environments.py  test_shell_integration.py  test_version.py
