[project]
name = "uvg"
version = "0.1.3"
description = "A global virtual environment manager built on top of uv"
readme = "README.md"
authors = [
    { name = "Noai-oss", email = "jiuwoxiao@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.1",
]

[project.scripts]
uvg = "uvg.__main__:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "git-cliff>=2.13.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
    "typos>=1.45.1",
]
